--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -26,8 +26,7 @@
     <div class="wholeTopPage">
       <div class="topUpperForHeader">
         <header>
-          <img class="iHelp" id="iHelp" src="./images/iHelp.png" alt="">
-          <h1>iHelp</h1>
+          <h1>Cleopatra</h1>
         </header>
       </div>
       <div class="bottomTopPage">
@@ -42,11 +41,11 @@
           </ul>
         </nav>
       </div>
-      <h2>Kontakta oss</h2>
       <div class="bigContactBox">
+        <h2>Kontakta oss</h2>
         <div class="smallBoxesContact">
           <div class="ourBuilding">
-            <img id="myBuilding" src="./images/myBuilding.jpg" alt="">
+            <img id="myBuilding" src="./images/myOfficetwo.jpg" alt="">
 
           </div>
           <div class="ourAdress">
@@ -61,7 +60,7 @@
             </div>
             <div class="ourInformationBox">
               <p>08-437 94 43</p>
-              <p>Vadhe@företaget.com</p>
+              <p>Info@clinique.com</p>
               <p>Strandvägen 1, Stockholm</p>
               <p>@CliniqueCleopatra</p>
               <p>Clinique Cleopatra</p>
@@ -75,47 +74,59 @@
 
           </div>
 
-        </div>
-        <div class="smallBoxesContactTwo">
-          <div class="AskUs">
-            <div class="AskUsBox">
-              <div class="writeBox">
-                <input type="text" class="firstName" placeholder="Förnamn">
-                <input type="email" class="email" placeholder="E-post">
-                <select name="" id="dropDownDoctors">
-                  <option value="">Välj din läkare</option>
-                  <option value="">Albert Johansson - Specialistläkare</option>
-                  <option value="">Albert Johansson - Specialistläkare</option>
-                  <option value="">Albert Johansson - Specialistläkare</option>
-                </select>
+          <div class="smallBoxesContactTwo">
+            <div class="AskUs">
+              <div class="AskUsBox">
+                <div class="writeBox">
+                  <input type="text" class="firstName" placeholder="Förnamn">
+                  <input type="email" class="email" placeholder="E-post">
+                  <select name="" id="dropDownDoctors">
+                    <option value="">Kategori</option>
+                    <option value="">Bröstkirurgi</option>
+                    <option value="">Fillers</option>
+                    <option value="">Rhinoplasty</option>
+                    <option value="">Microneedling</option>
+                    <option value="">PRP</option>
+                    <option value="">Annat</option>
+                    <option value="">Synpunkter</option>
+                    <option value="">Klagomål</option>
+                  </select>
+                </div>
+                <div class="writeBox">
+                  <input type="text" class="firstName" placeholder="Efternamn">
+                  <input type="tel" id="phone" name="phone" placeholder="Mobilnummer">
+                  <select name="" id="dropDownDoctors">
+
+                    <option value="">Mottagare</option>
+                    <option value="">Albert Johansson - Fillers</option>
+                    <option value="">Annika Hedman - Fillers</option>
+                    <option value="">Henke Dover - Specialist i plastikkirurgi</option>
+                    <option value="">Håkan Svensson - Hudläkarspecialist</option>
+                    <option value="">Gösta Gustavsson - Specialist i anesti & intensivvård</option>
+                    <option value="">Pelle Hedman - Regionschef </option>
+                    <option value="">Rocky - Maskot </option>
+                  </select>
+
+
+
+
+                </div>
               </div>
-              <div class="writeBox">
-                <input type="text" class="firstName" placeholder="Efternamn">
-                <input type="tel" id="phone" name="phone" placeholder="Mobilnummer">
-                <select name="" id="dropDownDoctors">
-                  <option value="">Behandling</option>
-                  <option value="">Albert Johansson - Specialistläkare</option>
-                  <option value="">Albert Johansson - Specialistläkare</option>
-                  <option value="">Albert Johansson - Specialistläkare</option>
-                </select>
+              <div class="userInput">
 
-
-
+                <div class="comments">
+                  <input type="text" class="commentReview">
+                  <button>Skicka</button>
+                </div>
 
               </div>
+
+
             </div>
-            <div class="userInput">
-
-              <div class="comments">
-                <input type="text" class="commentReview">
-                <button>Skicka</button>
-              </div>
-
-            </div>
-
-
           </div>
+
         </div>
+
 
       </div>
 
