--- a/indexOmOss.html
+++ b/indexOmOss.html
@@ -24,8 +24,7 @@
     <div class="wholeTopPage">
       <div class="topUpperForHeader">
         <header>
-          <img class="iHelp" id="iHelp" src="./images/iHelp.png" alt="">
-          <h1>iHelp</h1>
+          <h1>Cleopatra</h1>
         </header>
       </div>
       <div class="bottomTopPage">
@@ -42,89 +41,111 @@
       </div>
 
       <div class="omOssPage">
-        <div class="omOssRubrik">
+        <div class="omOssRubrikText">
           <h2>Om Oss</h2>
+          <p>Clinique Cleopatra grundades år 2010 av Annika Hedman och hennes far Pelle Hedman. Annika började först
+            jobba som tandläkare och tog därefter en utbildning för att kunna utför fillersbehandlingar hos Akademi
+            Kliniken. Första kliniken som öppnades var belägen på Svanslösgatan i Sundbyberg och år 2017 så flyttade
+            kliniken in till Strandvägen 1 på Östermalm i centrala Stockholm.
+          </p>
+          <p>Vi vet att i synnerhet kirurgiska ingrepp kan vara en källa till oro och ängslan. Därför är det viktigt att
+            du känner
+            dig helt trygg med oss, från första konsultation till det sista återbesöket. Vår filosofi är att etablera
+            nära,
+            tillitsfulla relationer med alla våra patienter, oavsett vilken behandling det gäller. Vi är måna om att
+            alltid finnas
+            tillgängliga för våra patienter, när som helst på dygnet.</p>
+          <p>
+            Våra plastikkirurger är världsledande inom både rekonstruktiv och estetisk plastikkirurgi. Cleopatra utför
+            även
+            avancerad mikro-kirurgi. Vi har tagit fram våra egna metoder exempelvis när det gäller bröstförstoring och
+            vi deltar i
+            den senaste forskningen. Detta är din garanti för att du ska få bästa möjliga resultat. Hos oss kan du för
+            att ta del av olika typer av platsikkirurgiska åtgärder exempelvis som injektionsbehandlingar med
+            fillers.
+          </p>
+
         </div>
+        <div class="omOssRubrik">
+          <h2>Vår Personal</h2>
+        </div>
+
         <div class="ourEmployes">
           <div class="employes">
             <img id="employePhoto" src="./images/albert.avif" alt="">
             <h3>Albert Johannesson</h3>
-            <h4>Specialistläkare</h4>
+            <h4>Tandläkare</h4>
             <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
+            <p id="contactStyle">Telefon: 0735443432</p>
+            <p id="contactStyle">Email:AJohansson@cleopatra.se</p>
+            <p>Albert Johansson har jobbat hos iHelp Cleopatra sedan 2012. Albert blev färdig utbildad tandläkare år
+              2002 och jobbar idag även på folktandvården. </p>
           </div>
           <div class="employes">
             <img id="employePhoto" src="./images/annika.avif" alt="">
             <h3>Annika Hedman</h3>
             <h4>Klinikchef</h4>
             <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
+            <p id="contactStyle">Telefon: 0705423432</p>
+            <p id="contactStyle">Email:A.hedman@cleopatra.se</p>
+            <p>Annika Hedman har tillsammans med sin pappa grundat kedjan iHelp Cleopatra år 2010. Hon har en bakgrund
+              som tandläkare och utför även fillersbehandlingar.</p>
           </div>
           <div class="employes">
             <img id="employePhoto" src="./images/Henke.avif" alt="">
             <h3>Henke Dover</h3>
-            <h4>Specialist i plastikkirurgi, överläkare</h4>
+            <h4>Specialist i plastikkirurgi</h4>
             <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
+            <p id="contactStyle">Telefon: 0794376562</p>
+            <p id="contactStyle">Email:Dover@cleopatra.se</p>
+            <p>Henrik Dover har jobbat hos oss sedan 2019. Han har tidigare jobbat vid Karolinska Universitetssjukhus
+              fram till år 2012. Han är en av Sveriges mest omtalade läkare.</p>
 
           </div>
           <div class="employes">
             <img id="employePhoto" src="./images/hakan.avif" alt="">
-            <h3>Albert Johannesson</h3>
-            <h4>Hudläkare, Specialist i dermatologi, PhD</h4>
+            <h3>Håkan Svensson</h3>
+            <h4>Hudläkarspecialist</h4>
             <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
+            <p id="contactStyle">Telefon: 0701232422</p>
+            <p id="contactStyle">Email:Hakan@cleopatra.se</p>
+            <p>Håkan Svensson är hudläkarspecialist och jobbar mer med ärrbehandlingar hos oss på Cleopatra. Han har
+              tidigare jobbat på Danderyds Sjukhus.</p>
 
           </div>
           <div class="employes">
             <img id="employePhoto" src="./images/Gosta.avif" alt="">
-            <h3>Albert Johannesson</h3>
-            <h4>Specialist i anesti & intensivvård, överläkare</h4>
+            <h3>Gösta Gustavsson</h3>
+            <h4>Specialist i anesti & intensivvård</h4>
             <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
+            <p id="contactStyle">Telefon: 0702423432</p>
+            <p id="contactStyle">Email: GostaGust@cleopatra.se</p>
+            <p>Gösta Gustavsson är klinikens anestiläkare och tar hand om narkos vid plastikkirurgiska ingrepp. Han har
+              tidigare varit narkosläkare i försvarsmakten.</p>
 
           </div>
           <div class="employes">
             <img id="employePhoto" src="./images/Pelle.avif" alt="">
-            <h3>Albert Johannesson</h3>
+            <h3>Pelle Hedman</h3>
             <h4>Regionschef</h4>
             <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
+            <p id="contactStyle">Telefon: 0722354332</p>
+            <p id="contactStyle">Email:P.hedman@cleopatra.se</p>
+            <p>Pelle Hedman är far till Annika Hedman och är medgrundare till Cleopatra. Idag är han pensionerad och
+              jobbar på deltid som regionschef.</p>
 
           </div>
           <div class="employes">
-            <img id="employePhoto" src="./images/Gosta.avif" alt="">
-            <h3>Albert Johannesson</h3>
-            <h4>Specialist i anesti & intensivvård, överläkare</h4>
+            <img id="employePhoto" src="./images/Rocky.jpg" alt="">
+            <h3>Rocky</h3>
+            <h4>Allas bästa vän</h4>
             <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
+            <p id="contactStyle">Telefon: 08-HUNDTELEFON</p>
+            <p id="contactStyle">Email: Rocky@cleopatra.se</p>
+            <p>Rocky är vår kliniks egna maskot. Pelle Hedman träffade Rocky på gatorna en varm
+              sommarkväll i Marbella</p>
 
           </div>
-          <div class="employes">
-            <img id="employePhoto" src="./images/Pelle.avif" alt="">
-            <h3>Albert Johannesson</h3>
-            <h4>Regionschef</h4>
-            <h5>Kontaktinformation:</h5>
-            <p>Telefon: 0705423432</p>
-            <p>Email:dasda@live.se</p>
-            <p>agagagadasdaasdasadadasdadadadadadadadadadasdadsdadasdadadfgdfgdfgfgddas</p>
-
-          </div>
-
 
 
         </div>
