--- a/indexProdukter.html
+++ b/indexProdukter.html
@@ -24,8 +24,7 @@
     <div class="wholeTopPage">
       <div class="topUpperForHeader">
         <header>
-          <img class="iHelp" id="iHelp" src="./images/iHelp.png" alt="">
-          <h1>iHelp</h1>
+          <h1>Clinique Cleopatra</h1>
         </header>
       </div>
       <div class="bottomTopPage">
@@ -46,8 +45,13 @@
         <div class="productLeftSide">
           <div class="productone">
             <div class="leftSideProduct">
-              <h3>Dermotologi</h3>
+              <h3>Bröstkirurgi</h3>
               <h4>Konsultation görs innan behandling.</h4>
+              <p>Bröstkirurgi är en operation för att öka storleken eller minska storleken på en persons bröst. Vanligen
+                sker förstorningen
+                genom att ett implantat innehållande antingen silikongel, flytande silikon eller koksaltlösning läggs in
+                under den stora
+                bröstmuskeln Vid förminskning så utförs en fettsugning.</p>
             </div>
             <div class="rightSideButton">
               <button>Boka tid</button>
@@ -55,8 +59,11 @@
           </div>
           <div class="productone">
             <div class="leftSideProduct">
-              <h3>Dermotologi</h3>
+              <h3>Microneedling</h3>
               <h4>Konsultation görs innan behandling.</h4>
+              <p>Microneedling stimulerar hudcellerna, kollagen, ökar blodcirkulationen och hudens elasticitet.
+                Microneedling stimulerar också huden och är bra för hudföryngring, mot pigmenteringar, akneärr,
+                bristningar och blekning.</p>
             </div>
             <div class="rightSideButton">
               <button>Boka tid</button>
@@ -64,8 +71,13 @@
           </div>
           <div class="productone">
             <div class="leftSideProduct">
-              <h3>Dermotologi</h3>
+              <h3>Botox</h3>
               <h4>Konsultation görs innan behandling.</h4>
+              <p>Botox blockerar nervimpulserna till ansiktsmusklerna och jämnar på så sätt ut linjer och rynkor.
+                Behandlingen är snabb
+                och enkel. Genom knappt kännbara tunna nålstick injiceras Botox i avsett behandlingsområde. Ingen
+                bedövning behövs och
+                man kan återgå till normala aktiviteter direkt efter behandlingen.</p>
             </div>
             <div class="rightSideButton">
               <button>Boka tid</button>
@@ -73,8 +85,12 @@
           </div>
           <div class="productone">
             <div class="leftSideProduct">
-              <h3>Dermotologi</h3>
+              <h3>Fillers</h3>
               <h4>Konsultation görs innan behandling.</h4>
+              <p>En fillerbehandling är en volymgivande injektionsbehandling baserad på hyaluronsyra som används för att
+                släta ut rynkor,
+                bygga upp förlorad volym, läppförstoring och även föryngra huden och behandla ärr. Det ger ett
+                omedelbart resultat.</p>
             </div>
             <div class="rightSideButton">
               <button>Boka tid</button>
@@ -82,8 +98,13 @@
           </div>
           <div class="productone">
             <div class="leftSideProduct">
-              <h3>Dermotologi</h3>
+              <h3>Rhinoplasty</h3>
               <h4>Konsultation görs innan behandling.</h4>
+              <p>Rhinoplasty är ett plastkirurgiskt ingrepp som syftar till att förändra formen och/eller storleken på
+                patientens näsa.
+                Näsplastik kan utföras av många olika anledningar, till exempel av estetiska skäl, för att näsan ska
+                fungera bättre
+                eller för att näsan behöver korrigeras på grund av skada/sjukdom/medfödda problem.</p>
             </div>
             <div class="rightSideButton">
               <button>Boka tid</button>
@@ -91,8 +112,10 @@
           </div>
           <div class="productone">
             <div class="leftSideProduct">
-              <h3>Dermotologi</h3>
+              <h3>PRP</h3>
               <h4>Konsultation görs innan behandling.</h4>
+              <p>Vid en PRP behandling som görs vid håravfall, det tas blod från patienten sedan in i en maskin där de
+                röda blodkropparna separeras från plasman. Sedan tar man plasman och injicerar det på skalpen </p>
             </div>
             <div class="rightSideButton">
               <button>Boka tid</button>
@@ -104,31 +127,25 @@
         <div class="pricelistRightSide">
           <div class="treatment">
             <ul>
-              <li>Tja </li>
-              <li>Tja</li>
-              <li>Tja</li>
-              <li>Tja</li>
-              <li>Tja</li>
-              <li>Tja</li>
-              <li>Tja</li>
-              <li>Tja</li>
-              <li>Tja</li>
-              <li>Tja</li>
+              <li>Bröstkirurgi </li>
+              <li>Fillers läppar/näsa</li>
+              <li>Botox</li>
+              <li>Microneedling</li>
+              <li>Rhinoplasty</li>
+              <li>PRP</li>
+
             </ul>
           </div>
           <div class="vertical-line"></div>
           <div class="treatmentPrice">
             <ul>
-              <li>från 2800 kr </li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
-              <li>från 2800 kr</li>
+              <li>från 28 000 kr </li>
+              <li>från 2 300 kr</li>
+              <li>från 2 800 kr</li>
+              <li>från 2 100 kr</li>
+              <li>från 33 000kr</li>
+              <li>från 2 000 kr</li>
+
             </ul>
           </div>
         </div>
