--- a/indexStartsida.html
+++ b/indexStartsida.html
@@ -24,7 +24,7 @@
     <div class="wholeTopPage">
       <div class="topUpperForHeader">
         <header>
-          <h1>iHelp</h1>
+          <h1>Cleopatra</h1>
         </header>
       </div>
       <div class="bottomTopPage">
@@ -41,28 +41,28 @@
       <div class="middlePage">
         <div class="leftSide">
           <div class="leftSideBox">
-            <h2>Hjälpen är närmare än vad du tror</h2>
+            <h2>Startsida</h2>
           </div>
           <p>
-            Muskelavslappande behandling med botulinumtoxin kan användas för att behandla rynkor i ansiktet som
-            orsakas av ansiktets
-            mimiska muskler, t.ex. mellan ögonbrynen, i pannan, runt ögon och mun.
+            Det finns många anledningar till att operera näsan. Det kan handla om att återställa näsan efter en olycka,
+            förbättra
+            luftflödet eller att man vill ha en mer proportionerlig näsa för ett mer naturligt utseende. Näsan är en
+            komplex
+            kroppsdel där Cleopatras erfarna plastikkirurger har den anatomiska kännedomen som krävs för att att lyckas
+            ge
+            klienten ett
+            tillfredsställande resultat oavsett om det handlar om näsans estetiska utseende eller funktion . Oftast
+            krävs en
+            operation som utförs i narkos, men ojämnheter i näsryggen går att jämna ut med fillers.
 
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur accusamus voluptatibus nesciunt iste
-            sequi ad quidem similique dolorum cum, nisi repudiandae? Soluta itaque necessitatibus rem exercitationem
-            sint alias vel nihil!
-            Man kan även behandla käkmuskeln för en smalare ansiktsform eller för att eliminera tandgnissling.
-            Muskelavslappning kan
-            också användas för behandling av näsrynkor, neddragna sura mungipor, rynkor runt munnen, skrynklig haka
-            samt för att
-            lyfta överläppskonturen och ge en sensuell mun.
+            Boka en konsultationstid idag för att få mer information om hur vi kan hjälp dig.
           </p>
 
 
         </div>
-        <div class="vertical-line"></div>
+
 
         <div class="rightSide">
           <img id="fillers" src="./images/fillers.jpg" alt="">
@@ -78,20 +78,26 @@
             <h2>Hjälpen är närmare än vad du tror</h2>
           </div>
           <p>
-            Muskelavslappande behandling med botulinumtoxin kan användas för att behandla rynkor i ansiktet som
-            orsakas av ansiktets
-            mimiska muskler, t.ex. mellan ögonbrynen, i pannan, runt ögon och mun.
+            Med senaste teknikerna inom plastikkirurgi erbjuder vi plastikkirurger på Cleopatra minimala ärr, säker
+            kirurgi
+            och en trygg
+            klientupplevelse. Välkommen till Cleopatra.
 
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur accusamus voluptatibus nesciunt iste
-            sequi ad quidem similique dolorum cum, nisi repudiandae? Soluta itaque necessitatibus rem exercitationem
-            sint alias vel nihil!
-            Man kan även behandla käkmuskeln för en smalare ansiktsform eller för att eliminera tandgnissling.
-            Muskelavslappning kan
-            också användas för behandling av näsrynkor, neddragna sura mungipor, rynkor runt munnen, skrynklig haka
-            samt för att
-            lyfta överläppskonturen och ge en sensuell mun.
+            En bröstförstoring med implantat är det vanligaste ingreppet inom estetisk plastikkirurgi. Med Cleopatras
+            unika teknik
+            och långa erfarenhet kan du känna dig trygg och säker och vi nöjer oss inte med annat än 100 procent nöjda
+            klienter. Vi
+            ser det unika i varje klients önskemål och förutsättning och skräddarsyr ingreppet just för dig. Det kan
+            handla om allt
+            ifrån implantatets storlek, textur, placering och genomförande.
+
+            Väljer du att genomgå en bröstförstoring med implantat hos Cleopatra erbjuder vi dig en kundresa som saknar
+            jämförelse.
+            Vi finns här för dig innan, under och efter operationen. Tillsammans med Europas och Sveriges ledande
+            leverantörer kan
+            vi erbjuda en trygghetsgaranti som ger dig som klient en säkerhet utöver det vanliga.
           </p>
 
 
