--- a/indexReferenser.html
+++ b/indexReferenser.html
@@ -125,7 +125,7 @@
             <div class="accountInfo">
               <h3> Sarah Ibrahim</h3>
               <p>@Sarah.a10</p>
-              <p id="reviewCommenting">Stort tack till Dr Albert!!</p>
+              <p id="reviewCommenting">"Stort tack till Dr Albert!!"</p>
             </div>
             <div class="rightSideReviewStar">
               <span class="fa fa-star checked"></span>
@@ -142,7 +142,7 @@
             <div class="accountInfo">
               <h3> Amanda Larsson P</h3>
               <p>@Anson1120</p>
-              <p id="reviewCommenting">Ni är bäst! kommer defenitivt till er igen!</p>
+              <p id="reviewCommenting">"Ni är bäst! kommer defenitivt till er igen!"</p>
             </div>
             <div class="rightSideReviewStar">
               <span class="fa fa-star checked"></span>
